syntax = "proto3";

package lumera.claim;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "lumera/claim/params.proto";
import "lumera/claim/claim_record.proto";

option go_package = "github.com/LumeraProtocol/lumera/x/claim/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/LumeraProtocol/lumera/claim/params";
  
  }
  
  // Queries a list of ClaimRecord items.
  rpc ClaimRecord (QueryClaimRecordRequest) returns (QueryClaimRecordResponse) {
    option (google.api.http).get = "/LumeraProtocol/lumera/claim/claim_record/{address}";
  
  }
  
  // Queries a list of ListClaimed items.
  rpc ListClaimed (QueryListClaimedRequest) returns (QueryListClaimedResponse) {
    option (google.api.http).get = "/LumeraProtocol/lumera/claim/list_claimed/{vestedTerm}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryClaimRecordRequest {
  string address = 1;
}

message QueryClaimRecordResponse {
  ClaimRecord record = 1;
}

message QueryListClaimedRequest {
  uint32                                vestedTerm  = 1;
  cosmos.base.query.v1beta1.PageRequest pagination  = 2;
}

message QueryListClaimedResponse {
  repeated ClaimRecord                   claims     = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

